feat: add simple organization page

--- a/frontend/app/app.css
+++ b/frontend/app/app.css
@@ -166,3 +166,24 @@
   --font-weight-base: 500;
   --font-weight-heading: 700;
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@layer utilities {
+  .spin {
+    animation: spin 1s linear infinite;
+  }
+}
+
+body {
+  font-family: "DM Sans", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+}
